--- a/LESS/header.less
+++ b/LESS/header.less
@@ -1,19 +1,28 @@
-.topbar {
+.home-topbar {
   top: 0;
   left: 0;
   padding: 3%;
   width: 100%;
-  z-index: 999;
+  z-index: 700;
   display: flex;
   position: fixed;
+  background-color: @primary-color; 
   justify-content: space-between;
-
+  
+  
   @media @desktop {
-    position: relative;
+    width: 100%;
+    padding: 3% 0;
+    position: fixed;
     align-items: center;
-    justify-content: flex-start;
+    padding-left: 10%;
+    justify-content: center;
   }
-
+  
+  @media (min-width: 1440px) {
+    padding-left: 0;
+  }
+  
   .logo {
     width: 40px;
     height: 50px;
@@ -22,7 +31,7 @@
     border-radius: 8px;
     transition: 0 ease-in-out;
     .flex(row, center, center);
-    background-color: @greyscale;
+    background-color: @greyscale; 
 
     @media @desktop {
       font-size: @small-font;
@@ -36,8 +45,9 @@
   }
 
   .nav-btn {
-    z-index: 999;
-    font-size: @text-font;
+    z-index: 1000;
+    font-size: @medium-font;
+    color: @secondary-color;
 
     @media @desktop {
       display: none;
