--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -11,3 +11,4 @@
 
 // Breakpoints 
 @desktop: ~"(min-width: 800px)";
+@tablet: ~"(min-width: 500px)";
